...
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/return_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:background="@drawable/abc_vector_test" />

            <TextView
...
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:textColor="@color/design_default_color_background"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/addHP"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/upgrade_button" />

                        <TextView
...
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@color/design_default_color_background"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/subHP"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@drawable/downgrade_button" />
                    </TableRow>

...
