<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/battlebg"
    tools:context=".page.LoginInputPage">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/usernameLabel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="Username"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/usernameText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/passwordLabel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="Password"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/passwordText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:ems="10"
                        android:inputType="textPassword" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/phoneNumberLabel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="PhoneNumber(Optional)"
                        android:textAlignment="center"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/phoneNumberText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:ems="10"
                        android:inputType="textPersonName" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mailAddressLabel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="MailAddress(Optional)"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/mailAddressText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="7"
                        android:ems="10"
                        android:inputType="textPassword" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/loginStatus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="请输入用户名和密码"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginInput_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="onLoginInputClick"
                android:text="@string/Login" />

            <Button
                android:id="@+id/register_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="onRegisterClick"
                android:text="REGISTER" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        style="?metaButtonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="horizontal"
        tools:ignore="UselessParent" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

</FrameLayout>